# micioterm

./: .gitignore  README.md  config.example.toml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: PROMPT.md
src/: app.test.ts  app.ts  main.test.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: banner.rs  commands.rs  config.rs  lib.rs  window.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs
src-tauri/tests/: commands.rs  pty_roundtrip.rs
src/config/: config.test.ts  config.ts
src/core/: layout.test.ts  layout.ts  profiles.test.ts  profiles.ts  session.test.ts  session.ts  tabs.test.ts  tabs.ts
src/session/: store.test.ts  store.ts
src/terminal/: pane.test.ts  pane.ts  pty-bridge.test.ts  pty-bridge.ts
src/theme/: tokens.css  xterm-theme.test.ts  xterm-theme.ts
src/ui/: help-overlay.test.ts  help-overlay.ts  keybindings.test.ts  keybindings.ts  pane-grid.test.ts  pane-grid.ts  settings-panel.test.ts  settings-panel.ts  tab-bar.test.ts  tab-bar.ts
