[package]
name = "miciodev-terminal"
version = "0.1.0"
description = "MicioDev Terminal — a native macOS terminal emulator"
authors = ["MicioDev"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dev-dependencies]
# `test` feature enables tauri::test (mock_builder/mock_context) for command tests.
tauri = { version = "2.11.3", features = ["test"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
portable-pty = "0.9.0"
base64 = "0.22.1"
window-vibrancy = "0.7.1"
toml = "1.0.7"
